[SPARK] Backport latest features to SQL 1.2-1.3 package
(cherry picked from commit 33d8ce749fbb525b1dab7236a9dca35d76bca7e0)